test fix file too large (over 100mb)

--- a/src/input.css
+++ b/src/input.css
@@ -1,4 +1,8 @@
+@config "./tailwind.config.js";
+
+
 @import "tailwindcss";
+
 .perspective {
     perspective: 1000px;
   }
@@ -103,9 +107,92 @@
     opacity: 1;
   }
 
-  @layer base {
-    .root {
-      font-size: clamp(1rem, 2.5vw, 2rem);
-      padding: clamp(1rem, 2vw, 3rem);
-    }
+  body {
+    margin: 0;
+    font-family: sans-serif;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+  }
+
+  #map {
+    flex: 1;
+  }
+
+  #nav-items {
+    display: flex;
+    gap: 2rem;
+    padding: 1rem;
+    background: #f5f5f5;
+    border-bottom: 1px solid #ccc;
+    overflow-x: auto;
+    justify-content: center;
+  }
+
+  #nav-items button {
+  background-color: #fbeee0;
+  border: 2px solid #422800;
+  border-radius: 30px;
+  box-shadow: #422800 4px 4px 0 0;
+  color: #422800;
+  cursor: pointer;
+  display: inline-block;
+  font-weight: 600;
+  font-size: 18px;
+  padding: 0 18px;
+  line-height: 50px;
+  text-align: center;
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  }
+
+  #nav-items button:hover {
+    background: var(--color-blue-950) ;
+    transform: scale(1.25);
+    color: white;
+  }
+
+  #legend {
+    padding: 0.5rem 1rem;
+    background: #e8e8e8;
+    border-top: 1px solid #ccc;
+  }
+
+  .legend-item {
+    margin-bottom: 0.5rem;
+  }
+
+  #info-panel h2 {
+  margin: 0 0 0.5rem 0;
+  }
+
+  #info-panel p {
+  margin: 0.5rem 0 0 0;
+  }
+
+  #nav-items .tour-button {
+    background-color: #fbeee0;
+    border: 2px solid #422800;
+    border-radius: 30px;
+    box-shadow: #422800 4px 4px 0 0;
+    color: #422800;
+    cursor: pointer;
+    display: inline-block;
+    font-weight: 600;
+    font-size: 18px;
+    padding: 0 18px;
+    line-height: 50px;
+    text-align: center;
+    text-decoration: none;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation
+  }
+
+  #nav-items .tour-button:hover {
+    background: var(--color-blue-950) ;
+    transform: scale(1.25);
+    color: white;
   }
